[gd_scene load_steps=15 format=2]

[ext_resource path="res://gfx/golem.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://gfx/zzz.png" type="Texture" id=3]
[ext_resource path="res://fonts/kenney-future.square-regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sfx/jump.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/walk_a.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/fall.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 6 )

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -8.0, 8.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "say_something"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "climb"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "sleep"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("zzz/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("zzz/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.25, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4.9687, -8.28116 ), Vector2( -6.969, -10.281 ), Vector2( -2.969, -14.281 ), Vector2( -6.969, -18.281 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("zzz/Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.75, 1.25, 1.75, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 10.0, -10.0, 10.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("zzz/Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 1.5, 1.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("zzz/Sprite2:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("zzz/Sprite2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.5, 1, 1.75, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4.9687, -8.28116 ), Vector2( -6.969, -10.281 ), Vector2( -2.969, -14.281 ), Vector2( -6.969, -18.281 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("zzz/Sprite2:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.5, 0.75, 1.25, 1.75, 2.25, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 10.0, -10.0, 10.0, 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("zzz/Sprite2:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("zzz/Sprite3:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 1, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("zzz/Sprite3:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 1, 1.5, 2.25, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4.9687, -8.28116 ), Vector2( -6.969, -10.281 ), Vector2( -2.969, -14.281 ), Vector2( -6.969, -18.281 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("zzz/Sprite3:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 1, 1.25, 1.75, 2.25, 2.75, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 10.0, -10.0, 10.0, 0.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("zzz/Sprite3:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1, 1.25, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("zzz/Sprite4:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 1.5, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("zzz/Sprite4:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 1.5, 2, 2.75, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4.9687, -8.28116 ), Vector2( -6.969, -10.281 ), Vector2( -2.969, -14.281 ), Vector2( -6.969, -18.281 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("zzz/Sprite4:rotation_degrees")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 1.5, 1.75, 2.25, 2.75, 3.25, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 10.0, -10.0, 10.0, 0.0 ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("zzz/Sprite4:modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 1.5, 1.75, 3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("zzz/Sprite5:scale")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 2, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("zzz/Sprite5:position")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 2, 2.5, 3.25, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4.9687, -8.28116 ), Vector2( -6.969, -10.281 ), Vector2( -2.969, -14.281 ), Vector2( -6.969, -18.281 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("zzz/Sprite5:rotation_degrees")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 2, 2.25, 2.75, 3.25, 3.75, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 10.0, -10.0, 10.0, 0.0 ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("zzz/Sprite5:modulate")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0, 2, 2.25, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="player" type="Area2D"]
z_index = 2
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -61.9514
margin_top = -28.1042
margin_right = 19.0486
margin_bottom = -19.1042
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "whats up my friend"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.392157, 1, 0.392157, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/fall = SubResource( 3 )
anims/move = SubResource( 4 )

[node name="label_animator" type="AnimationPlayer" parent="."]
anims/say_something = SubResource( 5 )

[node name="climb_animation" type="AnimationPlayer" parent="."]
anims/climb = SubResource( 6 )

[node name="sleep_animation" type="AnimationPlayer" parent="."]
anims/sleep = SubResource( 7 )

[node name="zzz" type="Node2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="zzz"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -4.9687, -8.28116 )
scale = Vector2( 0.1, 0.1 )
z_index = 3
z_as_relative = false
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="zzz"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -5.46877, -10.7811 )
scale = Vector2( 0.2, 0.2 )
z_index = 3
z_as_relative = false
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite3" type="Sprite" parent="zzz"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -5.96885, -13.2811 )
scale = Vector2( 0.3, 0.3 )
z_index = 3
z_as_relative = false
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite4" type="Sprite" parent="zzz"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -6.46892, -15.781 )
scale = Vector2( 0.4, 0.4 )
z_index = 3
z_as_relative = false
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite5" type="Sprite" parent="zzz"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -6.969, -18.281 )
scale = Vector2( 0.5, 0.5 )
z_index = 3
z_as_relative = false
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="walk_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="jump_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 10.0

[node name="fall_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
[connection signal="body_entered" from="." to="." method="_on_player_body_entered"]
